--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- Fazliddin aka -->
 
     <!-- // -->
     <!-- MuhammadDiyor -->
-     
+
     <!-- // -->
     <!-- Ilyosbek -->
-     <h1>Lorem ipsum dolor sit.</h1>
+    <h1>Lorem ipsum dolor sit.</h1>
     <!-- // -->
-</body>
+    <p>bu test uchun yozildi</p>
+  </body>
 </html>
