--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <!-- Fazliddin aka -->
 
     <!-- // -->
-    <!-- MuhammadDiyor -->
+    <!-- Ilyosbek -->
      
     <!-- // -->
-    <!-- Ilyosbek -->
-     <h1>Lorem ipsum dolor sit.</h1>
+    <!-- Muhammaddiyor -->
+    
     <!-- // -->
 </body>
 </html>
