--- a/index.html
+++ b/index.html
@@ -1,17 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <!-- Fazliddin aka -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./index.css" />
+  </head>
+  <body>
+    <div class="container">
+      <!-- Fazliddin aka -->
+      <div class="lacation">
+        <ul>
+          <li>
+            <i class="fa-light fa-location-dot"></i>
+            <a href="#">Toshkent</a>
+          </li>
+          <li>Topshirish punktlari</li>
+        </ul>
+      </div>
 
-    <!-- // -->
-    <!-- MuhammadDiyor -->
-     
-    <!-- // -->
-    <!-- Ilyosbek -->
-     <h1>Lorem ipsum dolor sit.</h1>
-    <!-- // -->
-</body>
+      <!-- // -->
+      <!-- MuhammadDiyor -->
+
+      <!-- // -->
+      <!-- Ilyosbek -->
+      <h1>Lorem ipsum dolor sit.</h1>
+      <!-- // -->
+    </div>
+  </body>
 </html>
