kod ishladi va tartibga olindi

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <div class="container">
+      <!-- Fazliddin -->
       <div class="lacation">
         <ul>
           <li>
@@ -25,6 +26,12 @@
           <li>Topshirish punktlari</li>
         </ul>
       </div>
+      <!-- /Fazliddin -->
+      <!-- Ilyosbek -->
+      <!-- /Ilyosbek -->
+       
+      <!-- Muhammaddiyor -->
+      <!-- /Muhammaddiyor -->
     </div>
   </body>
 </html>
