--- a/index.html
+++ b/index.html
@@ -20,10 +20,22 @@
       <div class="lacation">
         <ul>
           <li>
-            <i class="fa-light fa-location-dot"></i>
+            <i class="fa-regular fa-location-dot"></i>
             <a href="#">Toshkent</a>
           </li>
-          <li>Topshirish punktlari</li>
+          <li><a href="#">Topshirish punktlari</a></li>
+        </ul>
+      </div>
+      <div class="sotuvhai">
+        <ul>
+          <li><a href="#">Sotuvchi bo'lish</a></li>
+          <li><a href="#">Topshiriq pinkitini ochish</a></li>
+          <li><a href="#">Savol- javob</a></li>
+          <li><a href="#">Buyurtmalarim</a></li>
+          <li>
+            <img src="./img/bayroq.png" alt="rasm">
+            <h3>O'zbekcha</h3>
+          </li>
         </ul>
       </div>
       <!-- /Fazliddin -->
